--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,12 @@ body {
     background-color: #ffffff;
 }
 
+iframe {
+    position: absolute; 
+    left:0;
+    width:100%;
+}
+
 .container {
     max-width: 1280px;
     margin: 0 auto;
