--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@
     font-family: 'Museo Sans Cyrl', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 a {
@@ -15,11 +16,6 @@ body {
     background-color: #ffffff;
 }
 
-iframe {
-    position: absolute; 
-    left:0;
-    width:100%;
-}
 
 .container {
     max-width: 1280px;
@@ -27,6 +23,10 @@ iframe {
     padding: 0 30px
 }
 
+@import 'blocks/card';
+@import 'blocks/text_block';
 @import 'blocks/about';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/window';
+@import 'blocks/works';
