--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,4 +30,5 @@ body {
 @import 'blocks/buttons';
 @import 'blocks/window';
 @import 'blocks/works';
+@import 'blocks/soccer';
 @import 'blocks/footer';
