--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,4 +31,5 @@ body {
 @import 'blocks/window';
 @import 'blocks/works';
 @import 'blocks/soccer';
+@import 'blocks/pop-up';
 @import 'blocks/footer';
